y.output
   0  $accept : program $end

   1  primary_expression : IDENTIFIER
   2                     | CONSTANT
   3                     | '(' expression ')'

   4  postfix_expression : primary_expression
   5                     | postfix_expression '(' ')'
   6                     | postfix_expression '(' argument_expression_list ')'
   7                     | postfix_expression '.' IDENTIFIER
   8                     | postfix_expression PTR_OP IDENTIFIER

   9  argument_expression_list : expression
  10                           | argument_expression_list ',' expression

  11  unary_expression : postfix_expression
  12                   | unary_operator unary_expression
  13                   | SIZEOF unary_expression

  14  unary_operator : '&'
  15                 | '*'
  16                 | '-'

  17  multiplicative_expression : unary_expression
  18                            | multiplicative_expression '*' unary_expression
  19                            | multiplicative_expression '/' unary_expression

  20  additive_expression : multiplicative_expression
  21                      | additive_expression '+' multiplicative_expression
  22                      | additive_expression '-' multiplicative_expression

  23  relational_expression : additive_expression
  24                        | relational_expression '<' additive_expression
  25                        | relational_expression '>' additive_expression
  26                        | relational_expression LE_OP additive_expression
  27                        | relational_expression GE_OP additive_expression

  28  equality_expression : relational_expression
  29                      | equality_expression EQ_OP relational_expression
  30                      | equality_expression NE_OP relational_expression

  31  logical_and_expression : equality_expression
  32                         | logical_and_expression AND_OP equality_expression

  33  logical_or_expression : logical_and_expression
  34                        | logical_or_expression OR_OP logical_and_expression

  35  expression : logical_or_expression
  36             | unary_expression '=' expression

  37  declaration : declaration_specifiers declarator ';'
  38              | struct_specifier ';'

  39  declaration_specifiers : EXTERN type_specifier
  40                         | type_specifier

  41  type_specifier : VOID
  42                 | INT
  43                 | struct_specifier

  44  struct_specifier : STRUCT IDENTIFIER '{' struct_declaration_list '}'
  45                   | STRUCT '{' struct_declaration_list '}'
  46                   | STRUCT IDENTIFIER

  47  struct_declaration_list : struct_declaration
  48                          | struct_declaration_list struct_declaration

  49  struct_declaration : type_specifier declarator ';'

  50  declarator : '*' direct_declarator
  51             | direct_declarator

  52  direct_declarator : IDENTIFIER
  53                    | '(' declarator ')'
  54                    | direct_declarator '(' parameter_list ')'
  55                    | direct_declarator '(' ')'

  56  parameter_list : parameter_declaration
  57                 | parameter_list ',' parameter_declaration

  58  parameter_declaration : declaration_specifiers declarator

  59  statement : compound_statement
  60            | expression_statement
  61            | selection_statement
  62            | iteration_statement
  63            | jump_statement

  64  compound_statement : '{' '}'
  65                     | '{' statement_list '}'
  66                     | '{' declaration_list '}'
  67                     | '{' declaration_list statement_list '}'

  68  declaration_list : declaration
  69                   | declaration_list declaration

  70  statement_list : statement
  71                 | statement_list statement

  72  expression_statement : ';'
  73                       | expression ';'

  74  selection_statement : IF '(' expression ')' statement
  75                      | IF '(' expression ')' statement ELSE statement

  76  iteration_statement : WHILE '(' expression ')' statement
  77                      | FOR '(' expression_statement expression_statement expression ')' statement

  78  jump_statement : RETURN ';'
  79                 | RETURN expression ';'

  80  program : external_declaration
  81          | program external_declaration

  82  external_declaration : function_definition
  83                       | declaration

  84  function_definition : declaration_specifiers declarator compound_statement

state 0
	$accept : . program $end  (0)

	EXTERN  shift 1
	INT  shift 2
	VOID  shift 3
	STRUCT  shift 4
	.  error

	program  goto 5
	type_specifier  goto 6
	external_declaration  goto 7
	declaration  goto 8
	declaration_specifiers  goto 9
	struct_specifier  goto 10
	function_definition  goto 11


state 1
	declaration_specifiers : EXTERN . type_specifier  (39)

	INT  shift 2
	VOID  shift 3
	STRUCT  shift 4
	.  error

	type_specifier  goto 12
	struct_specifier  goto 13


state 2
	type_specifier : INT .  (42)

	.  reduce 42


state 3
	type_specifier : VOID .  (41)

	.  reduce 41


state 4
	struct_specifier : STRUCT . IDENTIFIER '{' struct_declaration_list '}'  (44)
	struct_specifier : STRUCT . '{' struct_declaration_list '}'  (45)
	struct_specifier : STRUCT . IDENTIFIER  (46)

	IDENTIFIER  shift 14
	'{'  shift 15
	.  error


state 5
	$accept : program . $end  (0)
	program : program . external_declaration  (81)

	$end  accept
	EXTERN  shift 1
	INT  shift 2
	VOID  shift 3
	STRUCT  shift 4
	.  error

	type_specifier  goto 6
	external_declaration  goto 16
	declaration  goto 8
	declaration_specifiers  goto 9
	struct_specifier  goto 10
	function_definition  goto 11


state 6
	declaration_specifiers : type_specifier .  (40)

	.  reduce 40


state 7
	program : external_declaration .  (80)

	.  reduce 80


state 8
	external_declaration : declaration .  (83)

	.  reduce 83


state 9
	declaration : declaration_specifiers . declarator ';'  (37)
	function_definition : declaration_specifiers . declarator compound_statement  (84)

	IDENTIFIER  shift 17
	'('  shift 18
	'*'  shift 19
	.  error

	direct_declarator  goto 20
	declarator  goto 21


state 10
	declaration : struct_specifier . ';'  (38)
	type_specifier : struct_specifier .  (43)

	';'  shift 22
	IDENTIFIER  reduce 43
	'('  reduce 43
	'*'  reduce 43


state 11
	external_declaration : function_definition .  (82)

	.  reduce 82


state 12
	declaration_specifiers : EXTERN type_specifier .  (39)

	.  reduce 39


state 13
	type_specifier : struct_specifier .  (43)

	.  reduce 43


state 14
	struct_specifier : STRUCT IDENTIFIER . '{' struct_declaration_list '}'  (44)
	struct_specifier : STRUCT IDENTIFIER .  (46)

	'{'  shift 23
	IDENTIFIER  reduce 46
	'('  reduce 46
	'*'  reduce 46
	';'  reduce 46


state 15
	struct_specifier : STRUCT '{' . struct_declaration_list '}'  (45)

	INT  shift 2
	VOID  shift 3
	STRUCT  shift 4
	.  error

	type_specifier  goto 24
	struct_specifier  goto 13
	struct_declaration_list  goto 25
	struct_declaration  goto 26


state 16
	program : program external_declaration .  (81)

	.  reduce 81


state 17
	direct_declarator : IDENTIFIER .  (52)

	.  reduce 52


state 18
	direct_declarator : '(' . declarator ')'  (53)

	IDENTIFIER  shift 17
	'('  shift 18
	'*'  shift 19
	.  error

	direct_declarator  goto 20
	declarator  goto 27


state 19
	declarator : '*' . direct_declarator  (50)

	IDENTIFIER  shift 17
	'('  shift 18
	.  error

	direct_declarator  goto 28


state 20
	declarator : direct_declarator .  (51)
	direct_declarator : direct_declarator . '(' parameter_list ')'  (54)
	direct_declarator : direct_declarator . '(' ')'  (55)

	'('  shift 29
	')'  reduce 51
	','  reduce 51
	';'  reduce 51
	'{'  reduce 51


state 21
	declaration : declaration_specifiers declarator . ';'  (37)
	function_definition : declaration_specifiers declarator . compound_statement  (84)

	';'  shift 30
	'{'  shift 31
	.  error

	compound_statement  goto 32


state 22
	declaration : struct_specifier ';' .  (38)

	.  reduce 38


state 23
	struct_specifier : STRUCT IDENTIFIER '{' . struct_declaration_list '}'  (44)

	INT  shift 2
	VOID  shift 3
	STRUCT  shift 4
	.  error

	type_specifier  goto 24
	struct_specifier  goto 13
	struct_declaration_list  goto 33
	struct_declaration  goto 26


state 24
	struct_declaration : type_specifier . declarator ';'  (49)

	IDENTIFIER  shift 17
	'('  shift 18
	'*'  shift 19
	.  error

	direct_declarator  goto 20
	declarator  goto 34


state 25
	struct_specifier : STRUCT '{' struct_declaration_list . '}'  (45)
	struct_declaration_list : struct_declaration_list . struct_declaration  (48)

	INT  shift 2
	VOID  shift 3
	STRUCT  shift 4
	'}'  shift 35
	.  error

	type_specifier  goto 24
	struct_specifier  goto 13
	struct_declaration  goto 36


state 26
	struct_declaration_list : struct_declaration .  (47)

	.  reduce 47


state 27
	direct_declarator : '(' declarator . ')'  (53)

	')'  shift 37
	.  error


state 28
	declarator : '*' direct_declarator .  (50)
	direct_declarator : direct_declarator . '(' parameter_list ')'  (54)
	direct_declarator : direct_declarator . '(' ')'  (55)

	'('  shift 29
	')'  reduce 50
	','  reduce 50
	';'  reduce 50
	'{'  reduce 50


state 29
	direct_declarator : direct_declarator '(' . parameter_list ')'  (54)
	direct_declarator : direct_declarator '(' . ')'  (55)

	EXTERN  shift 1
	INT  shift 2
	VOID  shift 3
	STRUCT  shift 4
	')'  shift 38
	.  error

	type_specifier  goto 6
	declaration_specifiers  goto 39
	struct_specifier  goto 13
	parameter_list  goto 40
	parameter_declaration  goto 41


state 30
	declaration : declaration_specifiers declarator ';' .  (37)

	.  reduce 37


state 31
	compound_statement : '{' . '}'  (64)
	compound_statement : '{' . statement_list '}'  (65)
	compound_statement : '{' . declaration_list '}'  (66)
	compound_statement : '{' . declaration_list statement_list '}'  (67)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	EXTERN  shift 1
	INT  shift 2
	VOID  shift 3
	STRUCT  shift 4
	IF  shift 45
	WHILE  shift 46
	FOR  shift 47
	RETURN  shift 48
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	';'  shift 53
	'{'  shift 31
	'}'  shift 54
	.  error

	type_specifier  goto 6
	declaration  goto 55
	declaration_specifiers  goto 56
	primary_expression  goto 57
	expression  goto 58
	postfix_expression  goto 59
	unary_expression  goto 60
	unary_operator  goto 61
	multiplicative_expression  goto 62
	additive_expression  goto 63
	relational_expression  goto 64
	equality_expression  goto 65
	logical_and_expression  goto 66
	logical_or_expression  goto 67
	struct_specifier  goto 10
	statement  goto 68
	compound_statement  goto 69
	expression_statement  goto 70
	selection_statement  goto 71
	iteration_statement  goto 72
	jump_statement  goto 73
	statement_list  goto 74
	declaration_list  goto 75


state 32
	function_definition : declaration_specifiers declarator compound_statement .  (84)

	.  reduce 84


state 33
	struct_specifier : STRUCT IDENTIFIER '{' struct_declaration_list . '}'  (44)
	struct_declaration_list : struct_declaration_list . struct_declaration  (48)

	INT  shift 2
	VOID  shift 3
	STRUCT  shift 4
	'}'  shift 76
	.  error

	type_specifier  goto 24
	struct_specifier  goto 13
	struct_declaration  goto 36


state 34
	struct_declaration : type_specifier declarator . ';'  (49)

	';'  shift 77
	.  error


state 35
	struct_specifier : STRUCT '{' struct_declaration_list '}' .  (45)

	.  reduce 45


state 36
	struct_declaration_list : struct_declaration_list struct_declaration .  (48)

	.  reduce 48


state 37
	direct_declarator : '(' declarator ')' .  (53)

	.  reduce 53


state 38
	direct_declarator : direct_declarator '(' ')' .  (55)

	.  reduce 55


state 39
	parameter_declaration : declaration_specifiers . declarator  (58)

	IDENTIFIER  shift 17
	'('  shift 18
	'*'  shift 19
	.  error

	direct_declarator  goto 20
	declarator  goto 78


state 40
	direct_declarator : direct_declarator '(' parameter_list . ')'  (54)
	parameter_list : parameter_list . ',' parameter_declaration  (57)

	')'  shift 79
	','  shift 80
	.  error


state 41
	parameter_list : parameter_declaration .  (56)

	.  reduce 56


state 42
	primary_expression : IDENTIFIER .  (1)

	.  reduce 1


state 43
	primary_expression : CONSTANT .  (2)

	.  reduce 2


state 44
	unary_expression : SIZEOF . unary_expression  (13)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	.  error

	primary_expression  goto 57
	postfix_expression  goto 59
	unary_expression  goto 81
	unary_operator  goto 61


state 45
	selection_statement : IF . '(' expression ')' statement  (74)
	selection_statement : IF . '(' expression ')' statement ELSE statement  (75)

	'('  shift 82
	.  error


state 46
	iteration_statement : WHILE . '(' expression ')' statement  (76)

	'('  shift 83
	.  error


state 47
	iteration_statement : FOR . '(' expression_statement expression_statement expression ')' statement  (77)

	'('  shift 84
	.  error


state 48
	jump_statement : RETURN . ';'  (78)
	jump_statement : RETURN . expression ';'  (79)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	';'  shift 85
	.  error

	primary_expression  goto 57
	expression  goto 86
	postfix_expression  goto 59
	unary_expression  goto 60
	unary_operator  goto 61
	multiplicative_expression  goto 62
	additive_expression  goto 63
	relational_expression  goto 64
	equality_expression  goto 65
	logical_and_expression  goto 66
	logical_or_expression  goto 67


state 49
	primary_expression : '(' . expression ')'  (3)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	.  error

	primary_expression  goto 57
	expression  goto 87
	postfix_expression  goto 59
	unary_expression  goto 60
	unary_operator  goto 61
	multiplicative_expression  goto 62
	additive_expression  goto 63
	relational_expression  goto 64
	equality_expression  goto 65
	logical_and_expression  goto 66
	logical_or_expression  goto 67


state 50
	unary_operator : '&' .  (14)

	.  reduce 14


state 51
	unary_operator : '*' .  (15)

	.  reduce 15


state 52
	unary_operator : '-' .  (16)

	.  reduce 16


state 53
	expression_statement : ';' .  (72)

	.  reduce 72


state 54
	compound_statement : '{' '}' .  (64)

	.  reduce 64


state 55
	declaration_list : declaration .  (68)

	.  reduce 68


state 56
	declaration : declaration_specifiers . declarator ';'  (37)

	IDENTIFIER  shift 17
	'('  shift 18
	'*'  shift 19
	.  error

	direct_declarator  goto 20
	declarator  goto 88


state 57
	postfix_expression : primary_expression .  (4)

	.  reduce 4


state 58
	expression_statement : expression . ';'  (73)

	';'  shift 89
	.  error


state 59
	postfix_expression : postfix_expression . '(' ')'  (5)
	postfix_expression : postfix_expression . '(' argument_expression_list ')'  (6)
	postfix_expression : postfix_expression . '.' IDENTIFIER  (7)
	postfix_expression : postfix_expression . PTR_OP IDENTIFIER  (8)
	unary_expression : postfix_expression .  (11)

	PTR_OP  shift 90
	'('  shift 91
	'.'  shift 92
	LE_OP  reduce 11
	GE_OP  reduce 11
	EQ_OP  reduce 11
	NE_OP  reduce 11
	AND_OP  reduce 11
	OR_OP  reduce 11
	')'  reduce 11
	','  reduce 11
	'*'  reduce 11
	'-'  reduce 11
	'/'  reduce 11
	'+'  reduce 11
	'<'  reduce 11
	'>'  reduce 11
	'='  reduce 11
	';'  reduce 11


state 60
	multiplicative_expression : unary_expression .  (17)
	expression : unary_expression . '=' expression  (36)

	'='  shift 93
	LE_OP  reduce 17
	GE_OP  reduce 17
	EQ_OP  reduce 17
	NE_OP  reduce 17
	AND_OP  reduce 17
	OR_OP  reduce 17
	')'  reduce 17
	','  reduce 17
	'*'  reduce 17
	'-'  reduce 17
	'/'  reduce 17
	'+'  reduce 17
	'<'  reduce 17
	'>'  reduce 17
	';'  reduce 17


state 61
	unary_expression : unary_operator . unary_expression  (12)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	.  error

	primary_expression  goto 57
	postfix_expression  goto 59
	unary_expression  goto 94
	unary_operator  goto 61


state 62
	multiplicative_expression : multiplicative_expression . '*' unary_expression  (18)
	multiplicative_expression : multiplicative_expression . '/' unary_expression  (19)
	additive_expression : multiplicative_expression .  (20)

	'*'  shift 95
	'/'  shift 96
	LE_OP  reduce 20
	GE_OP  reduce 20
	EQ_OP  reduce 20
	NE_OP  reduce 20
	AND_OP  reduce 20
	OR_OP  reduce 20
	')'  reduce 20
	','  reduce 20
	'-'  reduce 20
	'+'  reduce 20
	'<'  reduce 20
	'>'  reduce 20
	';'  reduce 20


state 63
	additive_expression : additive_expression . '+' multiplicative_expression  (21)
	additive_expression : additive_expression . '-' multiplicative_expression  (22)
	relational_expression : additive_expression .  (23)

	'-'  shift 97
	'+'  shift 98
	LE_OP  reduce 23
	GE_OP  reduce 23
	EQ_OP  reduce 23
	NE_OP  reduce 23
	AND_OP  reduce 23
	OR_OP  reduce 23
	')'  reduce 23
	','  reduce 23
	'<'  reduce 23
	'>'  reduce 23
	';'  reduce 23


state 64
	relational_expression : relational_expression . '<' additive_expression  (24)
	relational_expression : relational_expression . '>' additive_expression  (25)
	relational_expression : relational_expression . LE_OP additive_expression  (26)
	relational_expression : relational_expression . GE_OP additive_expression  (27)
	equality_expression : relational_expression .  (28)

	LE_OP  shift 99
	GE_OP  shift 100
	'<'  shift 101
	'>'  shift 102
	EQ_OP  reduce 28
	NE_OP  reduce 28
	AND_OP  reduce 28
	OR_OP  reduce 28
	')'  reduce 28
	','  reduce 28
	';'  reduce 28


state 65
	equality_expression : equality_expression . EQ_OP relational_expression  (29)
	equality_expression : equality_expression . NE_OP relational_expression  (30)
	logical_and_expression : equality_expression .  (31)

	EQ_OP  shift 103
	NE_OP  shift 104
	AND_OP  reduce 31
	OR_OP  reduce 31
	')'  reduce 31
	','  reduce 31
	';'  reduce 31


state 66
	logical_and_expression : logical_and_expression . AND_OP equality_expression  (32)
	logical_or_expression : logical_and_expression .  (33)

	AND_OP  shift 105
	OR_OP  reduce 33
	')'  reduce 33
	','  reduce 33
	';'  reduce 33


state 67
	logical_or_expression : logical_or_expression . OR_OP logical_and_expression  (34)
	expression : logical_or_expression .  (35)

	OR_OP  shift 106
	')'  reduce 35
	','  reduce 35
	';'  reduce 35


state 68
	statement_list : statement .  (70)

	.  reduce 70


state 69
	statement : compound_statement .  (59)

	.  reduce 59


state 70
	statement : expression_statement .  (60)

	.  reduce 60


state 71
	statement : selection_statement .  (61)

	.  reduce 61


state 72
	statement : iteration_statement .  (62)

	.  reduce 62


state 73
	statement : jump_statement .  (63)

	.  reduce 63


state 74
	compound_statement : '{' statement_list . '}'  (65)
	statement_list : statement_list . statement  (71)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	IF  shift 45
	WHILE  shift 46
	FOR  shift 47
	RETURN  shift 48
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	';'  shift 53
	'{'  shift 31
	'}'  shift 107
	.  error

	primary_expression  goto 57
	expression  goto 58
	postfix_expression  goto 59
	unary_expression  goto 60
	unary_operator  goto 61
	multiplicative_expression  goto 62
	additive_expression  goto 63
	relational_expression  goto 64
	equality_expression  goto 65
	logical_and_expression  goto 66
	logical_or_expression  goto 67
	statement  goto 108
	compound_statement  goto 69
	expression_statement  goto 70
	selection_statement  goto 71
	iteration_statement  goto 72
	jump_statement  goto 73


state 75
	compound_statement : '{' declaration_list . '}'  (66)
	compound_statement : '{' declaration_list . statement_list '}'  (67)
	declaration_list : declaration_list . declaration  (69)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	EXTERN  shift 1
	INT  shift 2
	VOID  shift 3
	STRUCT  shift 4
	IF  shift 45
	WHILE  shift 46
	FOR  shift 47
	RETURN  shift 48
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	';'  shift 53
	'{'  shift 31
	'}'  shift 109
	.  error

	type_specifier  goto 6
	declaration  goto 110
	declaration_specifiers  goto 56
	primary_expression  goto 57
	expression  goto 58
	postfix_expression  goto 59
	unary_expression  goto 60
	unary_operator  goto 61
	multiplicative_expression  goto 62
	additive_expression  goto 63
	relational_expression  goto 64
	equality_expression  goto 65
	logical_and_expression  goto 66
	logical_or_expression  goto 67
	struct_specifier  goto 10
	statement  goto 68
	compound_statement  goto 69
	expression_statement  goto 70
	selection_statement  goto 71
	iteration_statement  goto 72
	jump_statement  goto 73
	statement_list  goto 111


state 76
	struct_specifier : STRUCT IDENTIFIER '{' struct_declaration_list '}' .  (44)

	.  reduce 44


state 77
	struct_declaration : type_specifier declarator ';' .  (49)

	.  reduce 49


state 78
	parameter_declaration : declaration_specifiers declarator .  (58)

	.  reduce 58


state 79
	direct_declarator : direct_declarator '(' parameter_list ')' .  (54)

	.  reduce 54


state 80
	parameter_list : parameter_list ',' . parameter_declaration  (57)

	EXTERN  shift 1
	INT  shift 2
	VOID  shift 3
	STRUCT  shift 4
	.  error

	type_specifier  goto 6
	declaration_specifiers  goto 39
	struct_specifier  goto 13
	parameter_declaration  goto 112


state 81
	unary_expression : SIZEOF unary_expression .  (13)

	.  reduce 13


state 82
	selection_statement : IF '(' . expression ')' statement  (74)
	selection_statement : IF '(' . expression ')' statement ELSE statement  (75)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	.  error

	primary_expression  goto 57
	expression  goto 113
	postfix_expression  goto 59
	unary_expression  goto 60
	unary_operator  goto 61
	multiplicative_expression  goto 62
	additive_expression  goto 63
	relational_expression  goto 64
	equality_expression  goto 65
	logical_and_expression  goto 66
	logical_or_expression  goto 67


state 83
	iteration_statement : WHILE '(' . expression ')' statement  (76)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	.  error

	primary_expression  goto 57
	expression  goto 114
	postfix_expression  goto 59
	unary_expression  goto 60
	unary_operator  goto 61
	multiplicative_expression  goto 62
	additive_expression  goto 63
	relational_expression  goto 64
	equality_expression  goto 65
	logical_and_expression  goto 66
	logical_or_expression  goto 67


state 84
	iteration_statement : FOR '(' . expression_statement expression_statement expression ')' statement  (77)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	';'  shift 53
	.  error

	primary_expression  goto 57
	expression  goto 58
	postfix_expression  goto 59
	unary_expression  goto 60
	unary_operator  goto 61
	multiplicative_expression  goto 62
	additive_expression  goto 63
	relational_expression  goto 64
	equality_expression  goto 65
	logical_and_expression  goto 66
	logical_or_expression  goto 67
	expression_statement  goto 115


state 85
	jump_statement : RETURN ';' .  (78)

	.  reduce 78


state 86
	jump_statement : RETURN expression . ';'  (79)

	';'  shift 116
	.  error


state 87
	primary_expression : '(' expression . ')'  (3)

	')'  shift 117
	.  error


state 88
	declaration : declaration_specifiers declarator . ';'  (37)

	';'  shift 30
	.  error


state 89
	expression_statement : expression ';' .  (73)

	.  reduce 73


state 90
	postfix_expression : postfix_expression PTR_OP . IDENTIFIER  (8)

	IDENTIFIER  shift 118
	.  error


state 91
	postfix_expression : postfix_expression '(' . ')'  (5)
	postfix_expression : postfix_expression '(' . argument_expression_list ')'  (6)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	')'  shift 119
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	.  error

	primary_expression  goto 57
	expression  goto 120
	postfix_expression  goto 59
	argument_expression_list  goto 121
	unary_expression  goto 60
	unary_operator  goto 61
	multiplicative_expression  goto 62
	additive_expression  goto 63
	relational_expression  goto 64
	equality_expression  goto 65
	logical_and_expression  goto 66
	logical_or_expression  goto 67


state 92
	postfix_expression : postfix_expression '.' . IDENTIFIER  (7)

	IDENTIFIER  shift 122
	.  error


state 93
	expression : unary_expression '=' . expression  (36)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	.  error

	primary_expression  goto 57
	expression  goto 123
	postfix_expression  goto 59
	unary_expression  goto 60
	unary_operator  goto 61
	multiplicative_expression  goto 62
	additive_expression  goto 63
	relational_expression  goto 64
	equality_expression  goto 65
	logical_and_expression  goto 66
	logical_or_expression  goto 67


state 94
	unary_expression : unary_operator unary_expression .  (12)

	.  reduce 12


state 95
	multiplicative_expression : multiplicative_expression '*' . unary_expression  (18)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	.  error

	primary_expression  goto 57
	postfix_expression  goto 59
	unary_expression  goto 124
	unary_operator  goto 61


state 96
	multiplicative_expression : multiplicative_expression '/' . unary_expression  (19)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	.  error

	primary_expression  goto 57
	postfix_expression  goto 59
	unary_expression  goto 125
	unary_operator  goto 61


state 97
	additive_expression : additive_expression '-' . multiplicative_expression  (22)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	.  error

	primary_expression  goto 57
	postfix_expression  goto 59
	unary_expression  goto 126
	unary_operator  goto 61
	multiplicative_expression  goto 127


state 98
	additive_expression : additive_expression '+' . multiplicative_expression  (21)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	.  error

	primary_expression  goto 57
	postfix_expression  goto 59
	unary_expression  goto 126
	unary_operator  goto 61
	multiplicative_expression  goto 128


state 99
	relational_expression : relational_expression LE_OP . additive_expression  (26)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	.  error

	primary_expression  goto 57
	postfix_expression  goto 59
	unary_expression  goto 126
	unary_operator  goto 61
	multiplicative_expression  goto 62
	additive_expression  goto 129


state 100
	relational_expression : relational_expression GE_OP . additive_expression  (27)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	.  error

	primary_expression  goto 57
	postfix_expression  goto 59
	unary_expression  goto 126
	unary_operator  goto 61
	multiplicative_expression  goto 62
	additive_expression  goto 130


state 101
	relational_expression : relational_expression '<' . additive_expression  (24)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	.  error

	primary_expression  goto 57
	postfix_expression  goto 59
	unary_expression  goto 126
	unary_operator  goto 61
	multiplicative_expression  goto 62
	additive_expression  goto 131


state 102
	relational_expression : relational_expression '>' . additive_expression  (25)

	IDENTIFIER  shift 42
	CONSTANT  shift 43
	SIZEOF  shift 44
	'('  shift 49
	'&'  shift 50
	'*'  shift 51
	'-'  shift 52
	.  error

	primary_expression  goto 57
	postfix_expression  goto 59
	unary_expression  goto 126
	unary_operator  goto 61
	multiplicative_expression  goto 62
	additive_expression  goto 132

